--- a/website/index.html
+++ b/website/index.html
@@ -9,19 +9,19 @@
   <meta name="google" content="notranslate" />
   <meta content="Mashup templates have been developped by Orson.io team" name="author">
 
-  <!-- Disable tap highlight on IE -->
+ 
   <meta name="msapplication-tap-highlight" content="no">
   
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
   <link href="./assets/favicon.ico" rel="icon">
 
-  <title>Title page</title>  
+  <title>Trump Tweets</title>  
 
 <link href="./main.d8e0d294.css" rel="stylesheet"></head>
 
 <body class="">
 
-<!-- Add your content of header -->
+
 <div class="background-color-layer" style="background-image: url('assets/images/Trumpfirst.jpg')"
 ></div>
 <main class="content-wrapper">
@@ -42,7 +42,6 @@
 
 
 
-<!-- Add your site or app content here -->
  
  <div class="container">
    <div class="row">
@@ -67,7 +66,7 @@
 
         <div class="card">
           <div class="card-block">
-            <h2>From his official declaration of candidacy in June 2015 through the first two-and-a-half years of his presidency, he tweeted over 17,000 times. Our data set has 16,715 tweets.</h2>
+            <h2>From his official declaration of candidacy in June 2015 through the first two-and-a-half years of his presidency, he tweeted over 17,000 times. Our data set has 16,715 tweets, but only 2,303 were good to use for market hours.</h2>
             <div class="row">
               <div class="col-md-4">
                 <img src="./assets/images/img-03.jpg" class="img-responsive" alt="">
@@ -90,7 +89,7 @@
 
         <div class="card">
           <div class="card-block">
-            <h2>Looking at our data we see Trump tweets most at 12p.m. EST.</h2>
+            <h2>Looking at our data we see Trump tweets most in the morning.</h2>
             <div class="row">
               <div class="col-md-8">
                 <img src="./assets/images/img-graph1.jpg" class="img-responsive" alt="">
@@ -119,8 +118,9 @@
             <h2>Votality!</h2>
             <div class="row">
               <div class="col-md-8">
-                <img src="./assets/images/img-graph2.jpg" class="img-responsive" alt="">
-                <p>This shows the... </p>
+                <img src="./assets/images/Votality.jpg" class="img-responsive" alt="">
+                <p>Let’s talk about how we want to measure the market moving. Started off with 5 mins after but chose not to do that. We chose intra minute volatility to track micro changes in buy or sell activity, rather than larger movements that occur over the course of the day.
+                </p>
               </div>
             </div>
           </div>
@@ -140,8 +140,8 @@
                      </div>
                      <div class="col-md-8">
        
-                     <p>Insert what we found here.</p>
-                     <p> So, did we change your mind on Donald, even just a little bit? </p>
+                     <p>So, right now there will be no profit with our model. We would want a live API for all data for better accuracy.</p>
+                     <p> We would want to also continue training the model and finding the best features. </p>
        
                      </div>
                    </div>
